fix: spacing

--- a/assets/css/pages/sign.css
+++ b/assets/css/pages/sign.css
@@ -27,6 +27,7 @@
     background-color: #4CAF50;
     color: white;
     padding: 5px 10px;
+    margin-top: 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
